# rustdantic

./: .gitignore  Cargo.toml
crates/apimachinery/choreo_api/: Cargo.toml
crates/apimachinery/choreo_api/src/: default.rs  lib.rs  validate.rs
crates/apimachinery/choreo_core/: Cargo.toml
crates/apimachinery/choreo_core/src/: lib.rs  resource.rs  unstructured.rs
crates/apimachinery/choreo_derive/: Cargo.toml  DESIGN.md
crates/apimachinery/choreo_derive/src/: choreo_resource.rs  lib.rs
crates/apimachinery/choreo_meta/: Cargo.toml
crates/apimachinery/choreo_meta/src/: condition.rs  fields_v1.rs  gvk.rs  lib.rs  managed_field_entry.rs  object_meta.rs  object_reference.rs  owner_reference.rs  relationship_reference.rs  type_meta.rs
crates/default_derive/: Cargo.toml
crates/default_derive/src/: default.rs  lib.rs
crates/validate_derive/: Cargo.toml  DESIGN.md
crates/validate_derive/src/: lib.rs  rules.rs  validate.rs
src/: main.rs
