[package]
name = "choreo_meta"
version = "0.1.0"
edition = "2021"


[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.137"
default_derive = { workspace = true}
validate_derive = { workspace = true}
choreo_api = {workspace = true}